[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abm-common-functions"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "setuptools>=75.8.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[tool.uv.workspace]
members = ["lib"]
